--- a/app/src/main/res/layout/layout_ad_list_item.xml
+++ b/app/src/main/res/layout/layout_ad_list_item.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/cardView"
-    android:layout_width="wrap_content"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_view"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    app:cardCornerRadius="2dp"
-    app:cardPreventCornerOverlap="true">
+    android:layout_gravity="center"
+    card_view:cardBackgroundColor="@android:color/white"
+    card_view:cardCornerRadius="6dp"
+    card_view:cardUseCompatPadding="true"
+    card_view:contentPadding="4dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -34,7 +36,7 @@
             android:gravity="center"
             android:maxLines="2"
             android:textColor="@android:color/white"
-            android:textSize="24sp" />
+            android:textSize="14sp" />
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
