--- a/app/src/main/res/layout/layout_ad_list_item.xml
+++ b/app/src/main/res/layout/layout_ad_list_item.xml
@@ -7,36 +7,58 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     card_view:cardBackgroundColor="@android:color/white"
-    card_view:cardCornerRadius="6dp"
-    card_view:cardUseCompatPadding="true"
+    card_view:cardCornerRadius="4dp"
     card_view:contentPadding="4dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter" />
-
-        <TextView
-            android:id="@+id/title"
+        <FrameLayout
+            android:id="@+id/top_ad_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/image"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:background="#88101010"
-            android:clickable="true"
-            android:ellipsize="end"
-            android:focusable="true"
-            android:gravity="center"
-            android:maxLines="2"
-            android:textColor="@android:color/white"
-            android:textSize="14sp" />
+            android:layout_alignParentTop="true">
 
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter" />
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_margin="10dp"
+                android:ellipsize="end"
+                android:gravity="left"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:textColor="@android:color/white"
+                android:textSize="14sp" />
+
+        </FrameLayout>
+
+        <TextView
+            android:id="@+id/price"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_below="@id/top_ad_container"
+            android:layout_gravity="bottom"
+            android:layout_margin="10dp"
+            android:ellipsize="end"
+            android:gravity="left"
+            android:maxLines="1"
+            android:singleLine="true"
+            android:text="300 uah"
+            android:textAllCaps="true"
+            android:textColor="#656161"
+            android:textSize="18sp" />
     </RelativeLayout>
+
+
 </android.support.v7.widget.CardView>
