--- a/app/src/main/res/layout/layout_ad_list_item.xml
+++ b/app/src/main/res/layout/layout_ad_list_item.xml
@@ -8,17 +8,17 @@
     android:layout_gravity="center"
     card_view:cardBackgroundColor="@android:color/white"
     card_view:cardCornerRadius="4dp"
-    card_view:contentPadding="4dp">
+    card_view:contentPadding="2dp">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <FrameLayout
             android:id="@+id/top_ad_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true">
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/image"
@@ -42,14 +42,17 @@
 
         </FrameLayout>
 
+
         <TextView
             android:id="@+id/price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_below="@id/top_ad_container"
+            android:layout_above="@id/price"
             android:layout_gravity="bottom"
-            android:layout_margin="10dp"
+
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:ellipsize="end"
             android:gravity="left"
             android:maxLines="1"
@@ -58,7 +61,61 @@
             android:textAllCaps="true"
             android:textColor="#656161"
             android:textSize="18sp" />
-    </RelativeLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginBottom="10dp"
+            android:background="#D2D0D0" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp">
+
+            <ImageView
+                android:id="@+id/avatar"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:layout_toLeftOf="@+id/more"
+                android:layout_toRightOf="@id/avatar"
+                android:gravity="left|center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:text="first name l."
+                    android:textSize="12sp" />
+            </LinearLayout>
+
+            <ImageView
+                android:id="@id/more"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:gravity="center_vertical"
+                android:src="@drawable/ic_more" />
+
+        </RelativeLayout>
+    </LinearLayout>
 
 
 </android.support.v7.widget.CardView>
