--- a/app/src/main/res/layout/layout_ad_list_item.xml
+++ b/app/src/main/res/layout/layout_ad_list_item.xml
@@ -8,6 +8,7 @@
     android:layout_gravity="center"
     card_view:cardBackgroundColor="@android:color/white"
     card_view:cardCornerRadius="4dp"
+    card_view:cardUseCompatPadding="true"
     card_view:contentPadding="2dp">
 
     <LinearLayout
