--- a/app/src/main/res/layout/fragment_ad_list.xml
+++ b/app/src/main/res/layout/fragment_ad_list.xml
@@ -19,7 +19,7 @@
         android:id="@+id/add_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
+        android:layout_gravity="bottom|center"
         android:layout_margin="16dp"
         android:src="@drawable/ic_add_white_24dp"
         fab:fab_colorNormal="@color/accent"
