--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,8 @@
     <color name="ripple">#A7FFEB</color>
     <color name="accent">#64FFDA</color>
     <color name="accent_pressed">#1DE9B6</color>
+
+    <color name="black_70_alpha">#B3000000</color>
+
+    <color name="black">#000000</color>
 </resources>
