--- a/app/src/main/res/layout/layout_ad_list_item.xml
+++ b/app/src/main/res/layout/layout_ad_list_item.xml
@@ -94,29 +94,30 @@
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="10dp">
 
-            <ImageView
-                android:id="@+id/avatar"
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:adjustViewBounds="true"
-                android:scaleType="fitCenter" />
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:id="@+id/avatar_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"
                 android:layout_toLeftOf="@+id/more"
-                android:layout_toRightOf="@id/avatar"
+
                 android:gravity="left|center"
-                android:orientation="vertical">
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/avatar"
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitCenter" />
 
                 <TextView
                     android:id="@+id/name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
                     android:ellipsize="end"
                     android:maxLines="1"
                     android:singleLine="true"
@@ -125,7 +126,7 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/more"
+                android:id="@id/more"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
