--- a/app/src/main/res/layout/layout_ad_list_item.xml
+++ b/app/src/main/res/layout/layout_ad_list_item.xml
@@ -96,7 +96,7 @@
 
 
             <LinearLayout
-                android:id="@+id/avatar_content"
+                android:id="@+id/avatar_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
@@ -126,7 +126,7 @@
             </LinearLayout>
 
             <TextView
-                android:id="@id/more"
+                android:id="@+id/more"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
