--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="black_70_alpha">#B3000000</color>
 
     <color name="black">#000000</color>
+
+    <color name="white">#FFFFFF</color>
 </resources>
