--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -19,6 +19,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/sale_counter"
                 android:layout_width="30dip"
                 android:layout_height="30dp"
                 android:background="@drawable/abc_btn_radio_material"
@@ -27,11 +28,13 @@
 
 
             <ImageView
+                android:id="@+id/avatar"
                 android:layout_width="80dip"
                 android:layout_height="80dp"
                 android:src="@drawable/abc_btn_radio_material" />
 
             <TextView
+                android:id="@+id/buy_counter"
                 android:layout_width="30dip"
                 android:layout_height="30dp"
                 android:background="@drawable/abc_btn_radio_material"
@@ -40,18 +43,21 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:text="Дмитрий Самойленко" />
 
         <TextView
+            android:id="@+id/location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:text="Миколаїв" />
 
         <TextView
+            android:id="@+id/since_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
