--- a/app/src/main/res/layout/layout_ad_list_item.xml
+++ b/app/src/main/res/layout/layout_ad_list_item.xml
@@ -106,12 +106,11 @@
                 android:gravity="left|center"
                 android:orientation="horizontal">
 
-                <ImageView
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/avatar"
                     android:layout_width="36dp"
                     android:layout_height="36dp"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitCenter" />
+                    android:src="@null" />
 
                 <TextView
                     android:id="@+id/name"
