--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,12 @@
     <color name="accent_pressed">#1DE9B6</color>
 
     <color name="black_70_alpha">#B3000000</color>
+    <color name="black_60_alpha">#99000000</color>
+    <color name="black_50_alpha">#80000000</color>
+    <color name="black_40_alpha">#66000000</color>
+    <color name="black_30_alpha">#4D000000</color>
+    <color name="black_20_alpha">#33000000</color>
+    <color name="black_10_alpha">#1A000000</color>
 
     <color name="black">#000000</color>
 
