--- a/app/src/main/res/layout/fragment_splashscreen.xml
+++ b/app/src/main/res/layout/fragment_splashscreen.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:id="@+id/splash_screen_image"
     android:layout_height="match_parent"
     android:scaleType="fitXY"
     android:src="@drawable/splashscreen">
