--- a/app/src/main/res/layout/fragment_my_user_login.xml
+++ b/app/src/main/res/layout/fragment_my_user_login.xml
@@ -4,8 +4,8 @@
     android:layout_height="match_parent">
 
     <ImageView
+        android:id="@+id/antresol_image"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/splashscreen" />
+        android:layout_height="match_parent" />
 </FrameLayout>
