--- a/app/src/main/res/layout/fragment_splashscreen.xml
+++ b/app/src/main/res/layout/fragment_splashscreen.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/antresol_image"
     android:layout_width="match_parent"
-    android:id="@+id/splash_screen_image"
     android:layout_height="match_parent"
-    android:scaleType="centerCrop"
-    android:src="@drawable/splashscreen">
+    android:scaleType="centerCrop">
 
 </ImageView>
