--- a/app/src/main/res/layout/fragment_my_user_profile.xml
+++ b/app/src/main/res/layout/fragment_my_user_profile.xml
@@ -43,6 +43,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
+                android:singleLine="true"
                 android:text="Дмитрий Самойленко" />
 
             <TextView
@@ -50,6 +51,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
+                android:singleLine="true"
                 android:text="Миколаїв" />
 
             <TextView
@@ -57,6 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
+                android:singleLine="true"
                 android:text="пользователь Antresol с 28 ноября 2014" />
 
             <TextView
@@ -64,6 +67,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:gravity="center_horizontal"
+                android:singleLine="true"
                 android:text="Моя Антресоль" />
 
             <FrameLayout
