--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -4,17 +4,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!--
-
-    <ImageView
-        android:id="@+id/blur_bg"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:alpha="200"
-        android:scaleType="fitXY"
-        android:src="@drawable/abc_btn_radio_material" />
--->
+        android:layout_height="match_parent">
 
+        <ImageView
+            android:id="@+id/screen_bg"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha="200"
+            android:scaleType="centerCrop"
+            android:src="@null" />
+    </FrameLayout>
 
     <ScrollView
         android:id="@+id/scroll_container"
