--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,8 @@
     <color name="black_20_alpha">#33000000</color>
     <color name="black_10_alpha">#1A000000</color>
 
-
     <color name="white">#FFFFFF</color>
+
+    <color name="grey">#B5B5B5</color>
+    <color name="grey_1">#E5E5E5</color>
 </resources>
