add comments field

--- a/app/src/main/res/layout/fragment_ad_page.xml
+++ b/app/src/main/res/layout/fragment_ad_page.xml
@@ -8,9 +8,8 @@
         android:id="@+id/scroll_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/ad_bottom_container"
         android:layout_alignParentTop="true"
-        android:layout_above="@id/ad_bottom_container">
+        android:layout_above="@+id/ad_bottom_container">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -58,10 +57,10 @@
                 <TextView
                     android:id="@+id/title"
                     android:layout_width="wrap_content"
-                    android:textStyle="bold"
                     android:layout_height="wrap_content"
                     android:singleLine="true"
-                    android:text="" />
+                    android:text=""
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/desc"
@@ -70,6 +69,43 @@
                     android:layout_marginTop="10dp"
                     android:text="" />
             </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#B0B0B0"></View>
+
+            <TextView
+                android:id="@+id/comments_amount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/grey_1"
+                android:padding="10dp"
+                android:singleLine="true"
+                android:text="@string/comments_amount"
+                android:textStyle="bold" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp">
+
+                <EditText
+                    android:id="@+id/comments_field"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:hint="@string/comments_hint" />
+
+                <Button
+                    android:id="@+id/send"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:text="@string/send" />
+            </RelativeLayout>
 
         </LinearLayout>
 
