--- a/app/src/main/res/drawable/like_btn_selector.xml
+++ b/app/src/main/res/drawable/like_btn_selector.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@drawable/ic_action_favorite" android:state_selected="true"></item>
-    <item android:drawable="@drawable/ic_action_favorite_outline"></item>
+    <item android:drawable="@drawable/ic_like_active" android:state_selected="true"></item>
+    <item android:drawable="@drawable/ic_like"></item>
 </selector>
