--- a/app/src/main/res/layout/fragment_my_user_profile.xml
+++ b/app/src/main/res/layout/fragment_my_user_profile.xml
@@ -44,40 +44,72 @@
                 android:id="@+id/name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="5dp"
                 android:singleLine="true"
-                android:textSize="18sp"
+                android:text="Дмитрий Самойленко"
                 android:textColor="@color/white"
-                android:text="Дмитрий Самойленко" />
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:textSize="16sp"
-                android:textColor="@color/grey_1"
+                android:layout_marginBottom="5dp"
                 android:singleLine="true"
-                android:text="Миколаїв" />
+                android:drawableLeft="@drawable/ic_pin"
+                android:drawablePadding="5dp"
+                android:text="Миколаїв"
+                android:textColor="@color/grey_1"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/since_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:textSize="12dp"
-                android:textColor="@color/grey"
                 android:singleLine="true"
-                android:text="пользователь Antresol с 28 ноября 2014" />
+                android:text="пользователь Antresol с 28 ноября 2014"
+                android:textColor="@color/grey"
+                android:textSize="12dp" />
 
-            <TextView
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:gravity="center_horizontal"
-                android:singleLine="true"
-                android:textColor="@color/white"
-                android:text="Моя Антресоль" />
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="20dp">
+
+                <View
+                    android:id="@+id/divider_part_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="1dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_toLeftOf="@+id/my_antresol_tv"
+                    android:layout_centerVertical="true"
+                    android:background="@color/grey" />
+
+                <TextView
+                    android:id="@id/my_antresol_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:gravity="center_horizontal"
+                    android:singleLine="true"
+                    android:text="Моя Антресоль"
+                    android:textColor="@color/white" />
+
+                <View
+                    android:id="@+id/divider_part_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="1dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_toRightOf="@id/my_antresol_tv"
+                    android:layout_toLeftOf="@+id/my_antresol_tv"
+                    android:background="@color/grey" />
+            </RelativeLayout>
 
             <FrameLayout
                 android:layout_width="match_parent"
